added mobile menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
             <a class="header-link" href="{{site.baseurl}}/projects">Проекты</a>
             <a class="header-link" href="{{site.baseurl}}/contacts">Контакты</a>
         </div>
-        <button class="burger">
+        <button id="burger-btn" class="burger">
             <span class="burger__line"></span>
-          </button>
+        </button>
     </div>
 </header>
