--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
   <body>
     {%- include header.html -%}
     {{ content }}
+    {%- include footer.html -%}
   </body>
   {%- include feedback-form.html -%}
+  {%- include mobile-menu.html -%}
   <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
 </html>
