--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,5 +15,6 @@
   </body>
   {%- include footer.html -%}
   {%- include feedback-form.html -%}
+  {%- include mobile-menu.html -%}
   <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
 </html>
