--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,7 @@
 @import "common";
 @import "header";
 @import "footer";
+@import "mobile-menu";
 @import "home";
 @import "projects";
 @import "project";
