--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -31,7 +31,7 @@
 .container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 100px 40px;
+    padding: 116px 40px 100px 40px;
 }
 
 .btn {
