--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,17 +1,24 @@
 .header {
-    position: absolute;
+    position: fixed;
     left: 0;
-    top: 0;
-    width: 100%;
+    top: 16px;
+    width: calc(100% - 2 * 40px);
     height: 96px;
+    z-index: 1000;
+    margin-left: 40px;
+    margin-right: 40px;
+    
+   
     &__container {
-        max-width: 1280px;
+        max-width: 1200px;
         margin: 0 auto;
         padding: 40px;
-
         display: flex;
         align-items: center;
         justify-content: space-between;
+        background: var(--color-yellow);
+        box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.05), 2px 2px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 20px;
     }
     &-logo {
         display: flex;
@@ -25,7 +32,7 @@
     }
     &-right {
         & > :last-child {
-            margin-left: 100px;
+            margin-left: 40px;
         }
     }
 }
