--- a/_includes/feedback-form.html
+++ b/_includes/feedback-form.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="feedback__body-item">
                     <label class="feedback__body-label">Телефон</label>
-                    <input class="feedback__body-input type="text" placeholder="+7">
+                    <input class="feedback__body-input" type="text" placeholder="+7">
                 </div>
                 <button class="btn btn--dark feedback__body-btn">Начать проект</button>
                 <p class="feedback__body-personal">Нажимая на кнопку вы даёте согласие <u>на обработку персональных данных</u></p>
