--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -1,3 +1,20 @@
+.h1 {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 64px;
+    text-align: center;
+    letter-spacing: -0.5px;
+
+    @media (max-width: 960px) {
+        font-size: 56px;
+        line-height: 56px;
+    }
+    @media (max-width: 640px) {
+        font-size: 40px;
+        line-height: 40px;
+    }
+}
+
 .h2 {
     font-weight: 700;
     font-size: 48px;
