fix filters in projects page

--- a/_includes/projects/top-content.html
+++ b/_includes/projects/top-content.html
@@ -1,5 +1,5 @@
 <div class="flex-container">
-    <h1 class="projects__title">Наши проекты</h1>
+    <h1 class="h1 projects__title">Наши проекты</h1>
     <p class="projects__descr">
         Мы сделали и запустили в работу более 500 проектов. Лучшие из них мы превратили в увлекательные истории.
     </p>
