--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -82,10 +82,6 @@
         }
     }
     .projects {
-        &__title {
-            font-size: 56px;
-            line-height: 56px;
-        }
         &__item {
             flex-direction: column;
             flex-direction: column-reverse;
@@ -246,7 +242,6 @@
     }
     .dropdown {
         position: relative;
-        //width: 250px;
         height: 64px;
         &__input {
             font-size: 16px;
@@ -258,6 +253,7 @@
             top: unset;
             left: 0;
             right: 0;
+            border-radius: 10px 10px 0 0; 
             &-spheres {
                 width: 100%;
                 height: 80%;
@@ -271,19 +267,6 @@
             &-item {
                 font-size: 16px;
                 line-height: 24px;
-                &.active {
-                    &::before {
-                        content: "";
-                        position: absolute;
-                        top: 10px;
-                        right: 30px;
-                        width: 10px;
-                        height: 15px;
-                        border-right: 3px solid #367CF4;
-                        border-bottom: 3px solid #367CF4;
-                        transform: rotate(45deg);
-                      }
-                }
             }
         }
     }
@@ -399,10 +382,6 @@
         }
     }
     .projects {
-        &__title {
-            font-size: 40px;
-            line-height: 40px;
-        }
         &__descr {
             font-size: 16px;
             line-height: 24px;
@@ -789,10 +768,6 @@
         }
     }
     .projects {
-        &__title {
-            font-size: 24px;
-            line-height: 28px;
-        }
         &__descr {
             font-size: 14px;
             line-height: 20px;
