--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -52,15 +52,17 @@
 }
 
 .btn {
-    //padding: 18px 56px;
     border-radius: 10px;
-
     min-height: 60px;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 24px;
     text-align: center;
     transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    @media (max-width: 390px) {
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
 
 .btn--dark {
@@ -98,4 +100,35 @@
     height: 14px;
     width: 18px;
     margin-left: 9px;
+}
+
+.input {
+    height: 64px;
+    width: 100%;
+    padding: 20px;
+    border: 2px solid rgba(51, 51, 51, 0.2);
+    border-radius: 10px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+
+    &:focus {
+        outline: none;
+    }
+
+    @media (max-width: 390px) {
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
+
+.label {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+
+    @media (max-width: 390px) {
+        font-size: 16px;
+        line-height: 20px;
+    }
 }
