--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 @import "header";
 @import "footer";
 @import "mobile-menu";
-@import "home";
+@import "home/home";
 @import "projects";
 @import "project";
 @import "contacts";
