--- a/_includes/home/section-hero.html
+++ b/_includes/home/section-hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
     <div class="container flex-container">
-        <h1 class="hero__title">15 лет делаем приложения для крупного бизнеса</h1>
+        <h1 class="hero__title h1">15 лет делаем приложения для крупного бизнеса</h1>
         <p class="hero__descr">
             Успех наших проектов стоит на 3-х китах: качественная аналитика, продуктовый дизайн, внедрение в работу
         </p>
