--- a/_includes/home/section-what-we-do.html
+++ b/_includes/home/section-what-we-do.html
@@ -4,13 +4,13 @@
         <h2 class="h2 section-title">Приоритетные для нас сферы</h2>
         <div class="what-we-do__items">
             <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item1">
-                <h3 class="h3 what-we-do__item1-title">Цифровизация бизнес-процессов</h3>
+                <h3 class="what-we-do__item1-title h3">Цифровизация бизнес-процессов</h3>
             </a>
             <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item2">
-                <h3 class="h3 what-we-do__item2-title">Системы управления проектами</h3>
+                <h3 class="what-we-do__item2-title h3">Системы управления проектами</h3>
             </a>
             <a href="{{site.baseurl}}/projects" class="what-we-do__item what-we-do__item3">
-                <h3 class="h3 what-we-do__item3-title">Электронный документооборот</h3>
+                <h3 class="what-we-do__item3-title h3">Электронный документооборот</h3>
             </a>
         </div>
     </div>
