--- a/_sass/home/_home.scss
+++ b/_sass/home/_home.scss
@@ -1,67 +1,9 @@
 @import "section-hero";
+@import "_section-what-we-do";
 
 .section-title {
     margin-top: 40px;
     width: 100%;
-}
-
-.what-we-do {
-    &__items {
-        margin-top: 80px;
-        width: 100%;
-        display: grid;
-        grid-template-areas:
-            "item1 item1"
-            "item2 item3";
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 450px 450px;
-        grid-gap: 24px;
-    }
-    &__item {
-        width: 100%;
-        border-radius: 20px;
-        background-repeat: no-repeat, repeat;
-    }
-    &__item1 {
-        grid-area: item1;
-        background-color: var(--color-purple);
-        background-image: url(img/calc.png);
-        background-position: right bottom;
-        background-size: 390px;
-        &-title {
-            color: var(--color-white);
-            max-width: 40%;
-            margin-left: 56px;
-            margin-top: 56px;
-            background-size: 400px;
-        }
-    }
-    &__item2 {
-        grid-area: item2;
-        background-color: var(--color-primary);
-        background-image: url(img/notebook.png);
-        background-position: right bottom;
-        background-size: 265px;
-        &-title {
-            color: var(--color-white);
-            max-width: 40%;
-            margin-left: 56px;
-            margin-top: 56px;
-        }
-    }
-    &__item3 {
-        grid-area: item3;
-        background-color: var(--color-white);
-        background-image: url(img/doc.png);
-        background-position: right bottom;
-        background-size: 265px;
-        &-title {
-            color: var(--color-dark);
-            max-width: 40%;
-            margin-left: 56px;
-            margin-top: 56px;
-        }
-    }
 }
 
 .why-we {
