--- a/_sass/home/_home.scss
+++ b/_sass/home/_home.scss
@@ -5,65 +5,18 @@
 @import "section-our-approach";
 @import "section-about-team";
 @import "section-trust-us";
+@import "section-our-awards";
 
 .section-title {
     margin-top: 40px;
     width: 100%;
+
+    @media (max-width: 640px) {
+        margin-top: 30px;
+    }
+
+    @media (max-width: 390px) {
+        margin-top: 20px;
+    }
 }
 
-.our-awards {
-    &__items {
-        margin-top: 80px;
-        width: 100%;
-        
-        display: grid;
-        grid-template-areas:
-            "item1 item2"
-            "item3 item4";
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 24px;
-    }
-    &__item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: var(--color-white);
-        border-radius: 20px;
-        padding: 40px;
-        & img {
-            max-width: 150px;
-            width: 100%;
-        }
-        &-title {
-            // font-weight: 600;
-            // font-size: 40px;
-            // line-height: 48px;
-            text-align: center;
-            color: var(--color-dark);
-            margin-top: 40px;
-            width: 100%;
-        }
-        &-desc {
-            font-weight: 500;
-            font-size: 24px;
-            line-height: 32px;
-            text-align: center;
-            color: var(--color-dark);
-            opacity: 0.56;
-            margin-top: 8px;
-        }
-        &-1 {
-            grid-area: item1;
-        }
-        &-2 {
-            grid-area: item2;
-        }
-        &-3 {
-            grid-area: item3;
-        }
-        &-4 {
-            grid-area: item4;
-        }
-    }
-}
