--- a/_sass/home/_section-about-team.scss
+++ b/_sass/home/_section-about-team.scss
@@ -5,6 +5,10 @@
         display: flex;
         flex-direction: row;
 
+        @media (max-width: 960px) {
+            flex-direction: column;
+        }
+
         @media (max-width: 640px) {
             margin-top: 60px;
         }
@@ -19,6 +23,11 @@
         border-radius: 20px;
         height: 450px;
         margin-right: 12px;
+
+        @media (max-width: 960px) {
+            width: 100%;
+            margin: 0;
+        }
 
         @media (max-width: 640px) {
             min-height: 416px;
@@ -56,6 +65,11 @@
         border-radius: 20px;
         height: 450px;
         margin-left: 16px;
+
+        @media (max-width: 960px) {
+            width: 100%;
+            margin: 24px 0 0 0;
+        }
 
         @media (max-width: 640px) {
             min-height: 416px;
