refactoring header, mobile-menu, footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__container">
         <div class="footer__top">
-            <h1 class="footer__title">Приглашаем вас на бесплатную консультацию</h1>
+            <h1 class="footer__title h1">Приглашаем вас на бесплатную консультацию</h1>
             <p class="footer__descr">После 15-минутной консультации мы составим коммерческое предложение с ориентиром по стоимости и срокам, пришлем его через 2 дня.</p>
             <button id="open-btn-footer" class="btn btn--white footer__btn modal-btn">Записаться на консультацию</button>
         </div>
