--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,13 +15,22 @@
         width: 100%;
     }
     &__title {
-        font-size: 64px;
-        font-weight: 700;
-        text-align: center;
         color: var(--color-white);
-        line-height: 64px;
-        letter-spacing: -0.5px;
         margin: 196px 177.5px 0 177.5px;
+
+        @media (max-width: 960px) {
+            margin: 150px 40px 0 40px;
+        }
+
+        @media (max-width: 640px) {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+
+        @media (max-width: 390px) {
+            margin-left: 16px;
+            margin-right: 16px;
+        }
     }
     &__descr {
         font-weight: 500;
@@ -31,11 +40,36 @@
         color: var(--color-white);
         opacity: 0.56;
         margin: 40px 216px 0px 216px;
+
+        @media (max-width: 960px) {
+            margin-left: 160.5px;
+            margin-right: 160.5px;
+        }
+
+        @media (max-width: 640px) {
+            font-size: 16px;
+            line-height: 24px;
+            margin-top: 32px;
+            margin-left: 75px;
+            margin-right: 75px;
+        }
+
+        @media (max-width: 390px) {
+            font-size: 14px;
+            line-height: 20px;
+            margin-left: 62px;
+            margin-right: 62px;
+        }
     }
 
     &__btn {
         margin-top: 80px;
         padding: 20px 35px;
+
+        @media (max-width: 640px) {
+            margin-top: 60px;
+            padding: 18px 24px;
+        }
     }
 
     &__bottom {
@@ -43,13 +77,40 @@
         flex-direction: row;
         justify-content: space-between;
         margin: 164px 40px 40px 40px;
+
+        @media (max-width: 640px) {
+            flex-direction: column;
+            align-items: center;
+            margin: 100px 20px 40px 20px;
+        }
+
+        @media (max-width: 390px) {
+            margin: 100px 16px 40px 16px;
+        }
+
         &-right {
             display: flex;
             flex-direction: row;
+
+            @media (max-width: 640px) {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     }
     &__personal {
         margin-right: 40px;
+
+        @media (max-width: 640px) {
+            margin-top: 8px;
+            margin-right: 0;
+        }
+    }
+
+    &__privacy {
+        @media (max-width: 640px) {
+            margin-top: 8px;
+        }
     }
     &__text {
         font-weight: 500;
