--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -1,183 +1,183 @@
-@media (max-width: 960px) {
-    .project {
-        &-content {
-            & > h1 {
-                font-size: 56px;
-                line-height: 56px;
-            }
-            &-video {
-                flex-direction: column;
-                &__left {
-                    width: calc(100% - 2 * 40px);
-                    margin: 40px;
-                }
-                &__right {
-                    width: calc(100% - 2 * 40px);
-                    margin: 40px;
-                }
-            }
-        }
-    }
-}
+// @media (max-width: 960px) {
+//     .project {
+//         &-content {
+//             & > h1 {
+//                 font-size: 56px;
+//                 line-height: 56px;
+//             }
+//             &-video {
+//                 flex-direction: column;
+//                 &__left {
+//                     width: calc(100% - 2 * 40px);
+//                     margin: 40px;
+//                 }
+//                 &__right {
+//                     width: calc(100% - 2 * 40px);
+//                     margin: 40px;
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media (max-width: 640px) {
-    .project {
-        &-content {
-            & > h1 {
-                font-size: 40px;
-                line-height: 40px;
-            }
-            & > h2 {
-                font-size: 32px;
-                line-height: 40px;
-                margin-top: 30px;
-            }
-            & > ol {
-                margin-top: 30px;
-                & li {
-                    padding-top: 30px;
-                }
-            }
-            & > h3 {
-                margin-top: 60px;
-                font-size: 24px;
-                line-height: 32px;
-            }
-            & > h4 {
-                margin-top: 180px;
-            }
-            & > p {
-                font-size: 16px;
-                line-height: 24px;
-            }
-            &-time {
-                margin-top: 60px;
-                &__left {
-                    margin-right: 8px;
-                    &-title {
-                        font-size: 16px;
-                        line-height: 24px;
-                    }
-                    &-month {
-                        font-size: 24px;
-                        line-height: 32px;
-                    }
-                }
-                &__right {
-                    margin-left: 8px;
-                    &-title {
-                        font-size: 16px;
-                        line-height: 24px;
-                    }
-                    &-month {
-                        font-size: 24px;
-                        line-height: 32px;
-                    }
-                }
-            }
-            &-video {
-                margin-top: 60px;
-                &__right {
-                    &-title {
-                        font-size: 24px;
-                        line-height: 32px;
-                    }
-                    &-descr {
-                        font-size: 16px;
-                        line-height: 24px;
-                        margin-top: 8px;
-                    }
-                }
-            }
-        }
-    }
-}
+// @media (max-width: 640px) {
+//     .project {
+//         &-content {
+//             & > h1 {
+//                 font-size: 40px;
+//                 line-height: 40px;
+//             }
+//             & > h2 {
+//                 font-size: 32px;
+//                 line-height: 40px;
+//                 margin-top: 30px;
+//             }
+//             & > ol {
+//                 margin-top: 30px;
+//                 & li {
+//                     padding-top: 30px;
+//                 }
+//             }
+//             & > h3 {
+//                 margin-top: 60px;
+//                 font-size: 24px;
+//                 line-height: 32px;
+//             }
+//             & > h4 {
+//                 margin-top: 180px;
+//             }
+//             & > p {
+//                 font-size: 16px;
+//                 line-height: 24px;
+//             }
+//             &-time {
+//                 margin-top: 60px;
+//                 &__left {
+//                     margin-right: 8px;
+//                     &-title {
+//                         font-size: 16px;
+//                         line-height: 24px;
+//                     }
+//                     &-month {
+//                         font-size: 24px;
+//                         line-height: 32px;
+//                     }
+//                 }
+//                 &__right {
+//                     margin-left: 8px;
+//                     &-title {
+//                         font-size: 16px;
+//                         line-height: 24px;
+//                     }
+//                     &-month {
+//                         font-size: 24px;
+//                         line-height: 32px;
+//                     }
+//                 }
+//             }
+//             &-video {
+//                 margin-top: 60px;
+//                 &__right {
+//                     &-title {
+//                         font-size: 24px;
+//                         line-height: 32px;
+//                     }
+//                     &-descr {
+//                         font-size: 16px;
+//                         line-height: 24px;
+//                         margin-top: 8px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media (max-width: 520px) {
-    .project {
-        &-content {
-            &-time {
-                flex-direction: column;
-                margin-top: 40px;
-                &__left {
-                    width: 100%;
-                    padding: 16px;
-                    margin: 0;
-                    border-radius: 10px;
-                }
-                &__right {
-                    width: 100%;
-                    padding: 16px;
-                    margin: 16px 0 0 0;
-                    border-radius: 10px;
-                }
-            }
-        }
-    }
-}
+// @media (max-width: 520px) {
+//     .project {
+//         &-content {
+//             &-time {
+//                 flex-direction: column;
+//                 margin-top: 40px;
+//                 &__left {
+//                     width: 100%;
+//                     padding: 16px;
+//                     margin: 0;
+//                     border-radius: 10px;
+//                 }
+//                 &__right {
+//                     width: 100%;
+//                     padding: 16px;
+//                     margin: 16px 0 0 0;
+//                     border-radius: 10px;
+//                 }
+//             }
+//         }
+//     }
+// }
 
-@media (max-width: 390px) {
-    .project {
-        &-content {
-            & > h1 {
-                font-size: 24px;
-                line-height: 28px;
-            }
-            & > h2 {
-                font-size: 24px;
-                line-height: 28px;
-                margin-top: 20px;
-            }
-            & > h3 {
-                margin-top: 40px;
-                font-size: 16px;
-                line-height: 24px;
-            }
-            & > h4 {
-                font-size: 16px;
-                line-height: 24px;
-                margin-top: 120px;
-            }
-            & > p {
-                font-size: 14px;
-                line-height: 20px;
-                margin-top: 20px;
-            }
-            & img {
-                margin-top: 40px;
-            }
+// @media (max-width: 390px) {
+//     .project {
+//         &-content {
+//             & > h1 {
+//                 font-size: 24px;
+//                 line-height: 28px;
+//             }
+//             & > h2 {
+//                 font-size: 24px;
+//                 line-height: 28px;
+//                 margin-top: 20px;
+//             }
+//             & > h3 {
+//                 margin-top: 40px;
+//                 font-size: 16px;
+//                 line-height: 24px;
+//             }
+//             & > h4 {
+//                 font-size: 16px;
+//                 line-height: 24px;
+//                 margin-top: 120px;
+//             }
+//             & > p {
+//                 font-size: 14px;
+//                 line-height: 20px;
+//                 margin-top: 20px;
+//             }
+//             & img {
+//                 margin-top: 40px;
+//             }
 
-            & > ol {
-                margin-top: 20px;
-                & li {
-                    padding-top: 20px;
-                    font-size: 16px;
-                    line-height: 24px;
-                }
-            }
+//             & > ol {
+//                 margin-top: 20px;
+//                 & li {
+//                     padding-top: 20px;
+//                     font-size: 16px;
+//                     line-height: 24px;
+//                 }
+//             }
 
-            &-item-half {
-                width: 70%;
-            }
+//             &-item-half {
+//                 width: 70%;
+//             }
 
-            &-video {
-                &__left {
-                    margin: 16px;
-                    width: calc(100% - 2 * 16px);
-                }
-                &__right {
-                    margin: 16px;
-                    width: calc(100% - 2 * 16px);
-                    &-title {
-                        font-size: 18px;
-                        line-height: 24px;
-                    }
-                    &__descr {
-                        font-size: 14px;
-                        line-height: 20px;
-                    }
-                }
-            }
-        }
-    }
-}
+//             &-video {
+//                 &__left {
+//                     margin: 16px;
+//                     width: calc(100% - 2 * 16px);
+//                 }
+//                 &__right {
+//                     margin: 16px;
+//                     width: calc(100% - 2 * 16px);
+//                     &-title {
+//                         font-size: 18px;
+//                         line-height: 24px;
+//                     }
+//                     &__descr {
+//                         font-size: 14px;
+//                         line-height: 20px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
