--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,13 +1,10 @@
 .header {
     position: fixed;
     left: 0;
-    top: 16px;
-    width: calc(100% - 2 * 40px);
-    height: 96px;
-    z-index: 1000;
-    margin-left: 40px;
-    margin-right: 40px;
-
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    
     @media (max-width: 640px) {
         width: calc(100% - 2 * 20px);
         margin-left: 20px;
@@ -25,17 +22,17 @@
         margin-left: 10px;
         margin-right: 10px;
     }
-    
+
     &__container {
         max-width: 1200px;
         margin: 0 auto;
-        padding: 40px;
+        padding: 24px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background: var(--color-yellow);
-        box-shadow: -2px -2px 5px rgba(0, 0, 0, 0.05), 2px 2px 5px rgba(0, 0, 0, 0.1);
-        border-radius: 20px;
+        background: rgba(243, 244, 245, 0.9);
+        border-bottom: 1px solid #e5e7eb;
+        backdrop-filter: blur(10px);
     }
     &-logo {
         display: flex;
@@ -84,7 +81,7 @@
         bottom: 0;
     }
 
-    @media (max-width: 640px)  {
+    @media (max-width: 640px) {
         display: block;
     }
 
