--- a/_sass/_project.scss
+++ b/_sass/_project.scss
@@ -5,10 +5,52 @@
         justify-content: center;
         max-width: 880px;
         margin: 0 auto;
-        padding-top: 120px;
+        padding-top: 73px;
         padding-left: 40px;
         padding-right: 40px;
-        padding-bottom: 150px;
+        padding-bottom: 200px;
+
+        @media (max-width: 960px) {
+            padding-bottom: 160px;
+        }
+
+        @media (max-width: 640px) {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        @media (max-width: 390px) {
+            padding-left: 16px;
+            padding-right: 16px;
+            padding-bottom: 100px;
+        }
+
+        @media (max-width: 320px) {
+            padding-right: 10px;
+            padding-left: 10px;
+        }
+
+        & > h1 {
+            font-style: normal;
+            font-weight: 700;
+            font-size: 64px;
+            line-height: 64px;
+            letter-spacing: -0.5px;
+            color: #333333;
+            margin-top: 160px;
+            margin-bottom: 16px;
+
+            @media (max-width: 640px) {
+                font-size: 40px;
+                line-height: 40px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 24px;
+                line-height: 28px;
+                margin-top: 100px;
+            }
+        }
 
         & > h2 {
             font-style: normal;
@@ -18,6 +60,17 @@
             letter-spacing: -0.5px;
             color: #333333;
             margin-top: 160px;
+
+            @media (max-width: 640px) {
+                font-size: 32px;
+                line-height: 40px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 24px;
+                line-height: 28px;
+                margin-top: 100px;
+            }
         }
 
         & > h3 {
@@ -26,7 +79,17 @@
             font-size: 32px;
             line-height: 40px;
             color: #333333;
-            margin-top: 32px;
+            margin-top: 40px;
+
+            @media (max-width: 640px) {
+                font-size: 24px;
+                line-height: 32px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 18px;
+                line-height: 24px;
+            }
         }
 
         & > p {
@@ -34,8 +97,18 @@
             font-weight: 500;
             font-size: 24px;
             line-height: 32px;
-            color: rgba(51, 51, 51, 0.56);
+            color: #333333;
             margin-top: 16px;
+
+            @media (max-width: 640px) {
+                font-size: 16px;
+                line-height: 24px;
+            }
+
+            @media (max-width: 390px) {
+                font-size: 14px;
+                line-height: 20px;
+            }
         }
 
         & > ol {
@@ -46,13 +119,23 @@
                 font-size: 24px;
                 line-height: 32px;
                 color: #333333;
-                padding-top: 40px;
+                padding-top: 24px;
+
+                @media (max-width: 640px) {
+                    font-size: 16px;
+                    line-height: 24px;
+                }
+
+                @media (max-width: 390px) {
+                    font-size: 14px;
+                    line-height: 20px;
+                }
             }
         }
 
         & > figure {
             & img {
-                margin-top: 32px;
+                margin-top: 24px;
                 width: 100%;
             }
             & figcaption {
@@ -62,7 +145,12 @@
                 line-height: 24px;
                 color: rgba(51, 51, 51, 0.56);
                 text-align: center;
-                margin-top: 24px;
+                margin-top: 16px;
+
+                @media (max-width: 390px) {
+                    font-size: 14px;
+                    line-height: 20px;
+                }
             }
         }
     }
