--- a/_includes/home/section-why-we.html
+++ b/_includes/home/section-why-we.html
@@ -4,14 +4,24 @@
         <h2 class="h2 section-title">IT-бюро со штатом сильных специалистов</h2>
         <div class="why-we__items">
             <div class="why-we__item why-we__item1">
-                <h3 class="h3 why-we__item1-title">Умеем внедрять программные системы в больших компаниях</h3>
+                <h3 class="h3 why-we__item1-title">
+                    Умеем внедрять <br />
+                    программные системы <br />
+                    в больших компаниях
+                </h3>
             </div>
             <div class="why-we__item why-we__item2">
-                <h3 class="h3 why-we__item2-title">100% наших проектов доведены до финала</h3>
+                <h3 class="h3 why-we__item2-title">
+                    100% наших проектов <br />
+                    доведены до финала
+                </h3>
             </div>
             <div class="why-we__item why-we__item3">
                 <h3 class="h3 why-we__item3-title">
-                    Помогаем сформулировать требования, спроектировать систему, написать техническое задание
+                    Помогаем сформулировать <br />
+                    требования, спроектировать <br />
+                    систему, написать <br />
+                    техническое задание
                 </h3>
             </div>
         </div>
