--- a/_sass/home/_section-why-we.scss
+++ b/_sass/home/_section-why-we.scss
@@ -26,7 +26,7 @@
             grid-gap: 24px;
         }
 
-        @media (max-width: 800px) {
+        @media (max-width: 640px) {
             margin-top: 60px;
         }
 
@@ -37,24 +37,31 @@
     }
     &__item {
         width: 100%;
-        height: 450px;
+        min-height: 450px;
         border-radius: 20px;
         background-repeat: no-repeat, repeat;
+
+        @media (max-width: 640px) {
+            min-height: 300px;
+        }
+
+        @media (max-width: 520px) {
+            min-height: unset;
+        }
     }
     &__item1 {
         grid-area: item1;
         background-color: var(--color-white);
         background-image: url(img/search.png);
-        background-position: center bottom;
-        background-size: 220px;
+        background-position: center bottom 23px;
+        background-size: 202px;
 
         @media (max-width: 960px) {
-            background-position: right bottom 35px;
-            background-size: 300px;
+            background-position: right bottom;
+            background-size: 285px;
         }
 
-        @media (max-width: 800px) {
-            height: 300px;
+        @media (max-width: 640px) {
             background-size: 206px;
         }
 
@@ -69,23 +76,22 @@
 
         &-title {
             color: var(--color-dark);
-            max-width: 100%;
             margin-left: 56px;
             margin-top: 56px;
 
-            @media (max-width: 960px) {
-                max-width: 60%;
-            }
-
-            @media (max-width: 800px) {
-                max-width: 55%;
+            @media (max-width: 640px) {
                 margin-top: 40px;
                 margin-left: 40px;
             }
 
             @media (max-width: 520px) {
-                max-width: 100%;
                 margin: 24px;
+            }
+
+            & br {
+                @media (max-width: 520px) {
+                    content: "";
+                }
             }
         }
     }
@@ -97,12 +103,11 @@
         background-size: 220px;
 
         @media (max-width: 960px) {
-            background-position: right bottom 35px;
+            background-position: right bottom;
             background-size: 300px;
         }
 
-        @media (max-width: 800px) {
-            height: 300px;
+        @media (max-width: 640px) {
             background-size: 206px;
         }
 
@@ -117,23 +122,22 @@
 
         &-title {
             color: var(--color-white);
-            max-width: 404px;
             margin-left: 56px;
             margin-top: 56px;
 
-            @media (max-width: 960px) {
-                max-width: 60%;
-            }
-
-            @media (max-width: 800px) {
-                max-width: 55%;
+            @media (max-width: 640px) {
                 margin-top: 40px;
                 margin-left: 40px;
             }
 
             @media (max-width: 520px) {
-                max-width: 100%;
                 margin: 24px;
+            }
+
+            & br {
+                @media (max-width: 520px) {
+                    content: "";
+                }
             }
         }
     }
@@ -142,15 +146,14 @@
         background-color: var(--color-purple);
         background-image: url(img/calc.png);
         background-position: right bottom;
-        background-size: 400px;
+        background-size: 403px;
 
         @media (max-width: 960px) {
-            background-position: right bottom 35px;
-            background-size: 300px;
+            background-position: right bottom;
+            background-size: 258px;
         }
 
-        @media (max-width: 800px) {
-            height: 300px;
+        @media (max-width: 640px) {
             background-size: 206px;
         }
 
@@ -165,23 +168,22 @@
 
         &-title {
             color: var(--color-white);
-            max-width: 42%;
             margin-left: 56px;
             margin-top: 56px;
 
-            @media (max-width: 960px) {
-                max-width: 60%;
-            }
-
-            @media (max-width: 800px) {
-                max-width: 55%;
+            @media (max-width: 640px) {
                 margin-top: 40px;
                 margin-left: 40px;
             }
 
             @media (max-width: 520px) {
-                max-width: 100%;
                 margin: 24px;
+            }
+
+            & br {
+                @media (max-width: 520px) {
+                    content: "";
+                }
             }
         }
     }
