--- a/_sass/_contacts.scss
+++ b/_sass/_contacts.scss
@@ -6,7 +6,7 @@
         flex-direction: column;
         max-width: 1280px;
         margin: 0 auto;
-        padding: 80px 40px 24px 40px;
+        padding: 73px 40px 24px 40px;
         @media (max-width: 640px) {
             padding: 56px 20px 24px 20px;
         }
@@ -19,7 +19,7 @@
     }
     &__title {
         color: var(--color-dark);
-        margin-top: 116px;
+        margin-top: 100px;
     }
     &-content {
         display: flex;
@@ -115,8 +115,17 @@
             font-size: 20px;
             line-height: 24px;
             color: black;
+
             &:focus {
                 outline: none;
+            }
+
+            &::placeholder {
+                font-style: normal;
+                font-weight: 400;
+                font-size: 20px;
+                line-height: 24px;
+                color: rgba(51, 51, 51, 0.56);
             }
         }
         &__btn {
